# SecureCrawl

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: test_and_build.yml
src/: lib.rs  main.rs  report.rs  supabase_writer.rs
src/crawler/: engine.rs  frontier.rs  mod.rs  rate_limiter.rs  robots.rs
src/scanner/: dns.rs  engine.rs  findings.rs  mod.rs  patterns.rs  subdomains.rs  tls.rs
