[package]
name = "SecureCrawl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12.25", features = ["json"] }
scraper = "0.25.0"
url = "2.5"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18.3"
anyhow = "1.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
robotparser = "0.11.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
