[package]
name = "SecureCrawl"
version = "0.1.0"
edition = "2024"

[lib]
name = "securecrawl"
path = "src/lib.rs"

[[bin]]
name = "securecrawl"
path = "src/main.rs"

[[bin]]
name = "securecrawl-api"
path = "src/bin/api.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12.25", features = ["json"] }
scraper = "0.25.0"
url = "2.5"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18.3"
anyhow = "1.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hickory-resolver = "0.24"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1.7"
webpki-roots = "0.26"
x509-parser = "0.16"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
